--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = Krasina
 :author: Marcos Cruz (programandala.net)
-:revdate: 2019-04-12
+:revdate: 2020-11-04
 :toc:
 :toc-title: Contenete/Content
 
@@ -13,10 +13,12 @@
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201903291928
+// Last modified 202011040102
 
+// Interlingue {{{1
 == Interlingue
 
+// Pri ti projecte {{{2
 === Pri ti projecte
 
 Scope:: Crear un libre digital in EPUB e altri formates de _Krasina_,
@@ -24,40 +26,44 @@ un rakonta original in Interlingue, scrit de Jan A. Kajš in 1938, quel
 esset ja digitalisat de Bedŕich Plavec secun li textu original e
 convertet de Thomas Schmidt in formate PDF in 2013.
 
-Autor:: Marcos Cruz, 2019.
+Autor:: Marcos Cruz, 2019, 2020.
 
 Web-loc:: http://ne.alinome.net[ne.alinome.net].
 
+// Qualmen constructer li libre {{{2
 === Qualmen constructer li libre
 
-Si Vu ne posse atender li liberation del sequente version, Vu self
+Si vu ne posse atender li liberation del sequente version, vu self
 posse constructer li libre-documentes.
 
 In prim, ples confirmar que li programas listat in li section
-"Requirements" (besones) del document <Makefile> es instalat in Vor
+"Requirements" (besones) del document <Makefile> es instalat in vor
 sistema.
 
 Tande ples intrar li documentiere del projecte e comandar `make` secun
 ti exemples:
 
 |===
-| Comande             | Efecte
+| Comande    | Efecte
 
-| make                | Constructer omni formates e variantes
-| make all            | Constructer omni formates e variantes
-| make epub           | Constructer li formate EPUB (omni variantes)
-| make epubd          | Constructer li formate EPUB per dbtoepub
-| make epubp          | Constructer li formate EPUB per pandoc
-| make epubx          | Constructer li formate EPUB per xsltproc
-| make odt            | Constructer li formate OpenDocument
-| make pdf            | Constructer li formate PDF (ambi grandores)
-| make pdfa4          | Constructer li formate PDF ye grandore DIN A4
-| make pdfletter      | Constructer li formate PDF ye grandore "letter"
-| make xml            | Constructer li formate DocBook
+| make       | Constructer li formates recomandat
+| make all   | Constructer omni formates
+| make azw3  | Constructer li AZW3
+| make dbk   | Constructer li DocBook
+| make epub  | Constructer li EPUB (omni variantes)
+| make epuba | Constructer li *EPUB per Asciidoctor EPUB3 (recomandat)*
+| make epubd | Constructer li EPUB per dbtoepub (sin covriment)
+| make epubp | Constructer li EPUB per Pandoc
+| make epubx | Constructer li EPUB per xsltproc (equivalent a dbtoepub)
+| make odt   | Constructer li OpenDocument
+| make pdf   | Constructer li PDF (ambi grandores)
+| make pdfa4 | Constructer li *PDF de grandore DIN A4 (recomandat)*
+| make pdfl  | Constructer li PDF de grandore «letter»
 |===
 
 Li documentes es creat in li documentiere <target>.
 
+// Nómines del documentes final {{{2
 === Nómines del documentes final
 
 Quande omni documentes final es constructet (talmen anc contenet in e li
@@ -65,13 +71,14 @@ liberaturas che GitHub e li archives descargabil ex
 http://ne.alinome.net[ne.alinome.net]), li contenete del documentiere <target>
 es ti:
 
-- krasina.adoc.a4.pdf
-- krasina.adoc.letter.pdf
-- krasina.adoc.xml
-- krasina.adoc.xml.dbtoepub.epub
-- krasina.adoc.xml.pandoc.epub
-- krasina.adoc.xml.pandoc.odt
-- krasina.adoc.xml.xsltproc.epub
+- krasina.adoc._a4.pdf
+- krasina.adoc._letter.pdf
+- krasina.adoc.dbk
+- krasina.adoc.dbk.dbtoepub.epub
+- krasina.adoc.dbk.pandoc.epub
+- krasina.adoc.dbk.pandoc.odt
+- krasina.adoc.dbk.xsltproc.epub
+- krasina.adoc.epub
 
 Li nómines es self-explicatori: Ili indica li operation de conversion
 de formates ex li documente fontal de
@@ -81,13 +88,18 @@ OpenDocument e PDF). Ultra to, ti convention nominal prevente futur
 colisiones de nómines, si plu convertores o formates vel esser
 adjuntet al projecte.
 
+////
+// XXX OLD --
 NOTE: Tri convertores es usat por constructer li documentes EPUB. Tis
 constructet per dbtoepub e xsltproc es virtualmen identic, ma ambi es includet
 por possibil beson. Fórsan alcun ex li tri variantes functiona plu bon in Vor
 libre-letor.
+////
 
+// English {{{1
 == English
 
+// Abouth this project {{{2
 === Abouth this project
 
 Goal:: Make an e-book in EPUB and other formats of _Krasina_, an
@@ -99,6 +111,7 @@ Author:: Marcos Cruz, 2019.
 
 Website:: http://ne.alinome.net[ne.alinome.net].
 
+// How to build the book {{{2
 === How to build the book
 
 If you cannot wait for the release of the next version, you can build
@@ -111,23 +124,26 @@ Then enter the project's directory and give the `make` command as
 follows:
 
 |===
-| Command             | Effect
+| Command    | Effect
 
-| make                | Build all formats and variants
-| make all            | Build all formats and variants
-| make epub           | Build the EPUB format (all variants)
-| make epubd          | Build the EPUB format with dbtoepub
-| make epubp          | Build the EPUB format with pandoc
-| make epubx          | Build the EPUB format with xsltproc
-| make odt            | Build the OpenDocument format
-| make pdf            | Build the PDF format (both sizes)
-| make pdfa4          | Build the DIN A4 size PDF format
-| make pdfletter      | Build the letter size PDF format
-| make xml            | Build the DocBook format
+| make       | Build the *recommended formats*
+| make all   | Build all formats
+| make azw3  | Build the AZW3
+| make dbk   | Build the DocBook
+| make epub  | Build the EPUB (all variants)
+| make epuba | Build the *EPUB with Asciidoctor EPUB3 (recommended)*
+| make epubd | Build the EPUB with dbtoepub (no cover page)
+| make epubp | Build the EPUB with Pandoc
+| make epubx | Build the EPUB with xsltproc (equivalent to dbtoepub)
+| make odt   | Build the OpenDocument
+| make pdf   | Build the PDF (both sizes)
+| make pdfa4 | Build the *PDF (DIN A4 size) (recommended)*
+| make pdfl  | Build the PDF (letter size)
 |===
 
 The documents are built in the <target> directory.
 
+// Names of the target files {{{2
 === Names of the target files
 
 When all target files are built (as included in the GitHub releases and in the
@@ -135,13 +151,14 @@ corresponding archives downloadable from
 http://ne.alinome.net[ne.alinome.net]), the contents of the <target> directory
 are the following:
 
-- krasina.adoc.a4.pdf
-- krasina.adoc.letter.pdf
-- krasina.adoc.xml
-- krasina.adoc.xml.dbtoepub.epub
-- krasina.adoc.xml.pandoc.epub
-- krasina.adoc.xml.pandoc.odt
-- krasina.adoc.xml.xsltproc.epub
+- krasina.adoc._a4.pdf
+- krasina.adoc._letter.pdf
+- krasina.adoc.dbk
+- krasina.adoc.dbk.dbtoepub.epub
+- krasina.adoc.dbk.pandoc.epub
+- krasina.adoc.dbk.pandoc.odt
+- krasina.adoc.dbk.xsltproc.epub
+- krasina.adoc.epub
 
 The names are self-explanatory: They indicate the format conversion
 process from the http://asciidoctor.org[Asciidoctor] source document,
@@ -150,7 +167,10 @@ formats (PDF, DocBook, EPUB and OpenDocument). Beside, this naming
 convention prevents name clashes in the future, if more tools or
 formats are added to the project.
 
+////
+// XXX OLD --
 NOTE: Three converters are used to build the EPUB files. Those built
 by dbtoepub and xsltproc are virtually identical, but both of them are
 included just in case. Perhaps some of the three variants gives better
 results on your reader.
+////
