Fix/update documentation.
FossilOrigin-Name: 2a9d90058a32ac1250d3c614d17c5a4fd6cd00fda466daf1e7518efd4b7fce5c

--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 202011040102
+// Last modified 202011040107
 
 // Interlingue {{{1
 == Interlingue
@@ -40,8 +40,8 @@ In prim, ples confirmar que li programas listat in li section
 "Requirements" (besones) del document <Makefile> es instalat in vor
 sistema.
 
-Tande ples intrar li documentiere del projecte e comandar `make` secun
-ti exemples:
+Tande ples intrar in li documentiere del projecte e comandar `make`
+secun ti exemples:
 
 |===
 | Comande    | Efecte
@@ -55,7 +55,7 @@ ti exemples:
 | make epubd | Constructer li EPUB per dbtoepub (sin covriment)
 | make epubp | Constructer li EPUB per Pandoc
 | make epubx | Constructer li EPUB per xsltproc (equivalent a dbtoepub)
-| make odt   | Constructer li OpenDocument
+| make odt   | Constructer li OpenDocument (sin covriment)
 | make pdf   | Constructer li PDF (ambi grandores)
 | make pdfa4 | Constructer li *PDF de grandore DIN A4 (recomandat)*
 | make pdfl  | Constructer li PDF de grandore «letter»
@@ -135,7 +135,7 @@ follows:
 | make epubd | Build the EPUB with dbtoepub (no cover page)
 | make epubp | Build the EPUB with Pandoc
 | make epubx | Build the EPUB with xsltproc (equivalent to dbtoepub)
-| make odt   | Build the OpenDocument
+| make odt   | Build the OpenDocument (no cover page)
 | make pdf   | Build the PDF (both sizes)
 | make pdfa4 | Build the *PDF (DIN A4 size) (recommended)*
 | make pdfl  | Build the PDF (letter size)
