Mark the colophon.
FossilOrigin-Name: 9a76491d293432f2a8c873bc48aa05ed86620d27c6927beae22c35b75b9ec6a9

--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -25,10 +25,11 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 202011041429
+// Last modified 202011041857
 
 :dot: .
 
+[colophon]
 // Pri ti libre {{{1
 == Pri ti libre
 
