Add GitHub repository.
FossilOrigin-Name: ce9af3ce9d2c600e5164a984ff20bf96f86b8b948a600c50eebf4bfb1d90c1d4

--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.2.0-dev.9+20201104
+:revnumber: 0.2.0-dev.10+20201105
 :doctype: book
 :lang: ie
 :docinfo: private
@@ -25,7 +25,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 202011041857
+// Last modified 202011051838
 
 :dot: .
 
@@ -48,8 +48,9 @@ Conversion a PDF:: Thomas Schmidt, 2013. Obtenibil in
 http://ie-munde.com[ie-munde.com].
 
 Conversion a Asciidoctor, revision, e edition quam libre digital::
-Marcos Cruz, 2019, 2020{dot} Obtenibil in
-http://ne.alinome.net[ne.alinome.net] ye formates EPUB, PDF e altris.
+Marcos Cruz, 2019, 2020{dot} Obtenibil in pluri formates in
+http://ne.alinome.net[ne.alinome.net] e su
+http://github.com/ne-alinome[repositoria in GitHub].
 
 Changes in ti edition::
 - Omni erras trovat esset corectet.
