--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 202011070020
+// Last modified 202011070035
 
 // Interlingue {{{1
 == Interlingue
@@ -55,7 +55,8 @@ secun ti exemples:
 | make epubd | Constructer li EPUB per dbtoepub (sin covriment)
 | make epubp | Constructer li EPUB per Pandoc
 | make epubx | Constructer li EPUB per xsltproc (equivalent a dbtoepub)
-| make md    | Constructer li Markdown de Pandoc per ti-ci
+| make html  | Constructer li HTML
+| make md    | Constructer li Markdown de Pandoc
 | make odt   | Constructer li OpenDocument (sin covriment)
 | make pdf   | Constructer li PDF (ambi grandores)
 | make pdfa4 | Constructer li *PDF de grandore DIN A4 (recomandat)*
@@ -136,7 +137,8 @@ follows:
 | make epubd | Build the EPUB with dbtoepub (no cover page)
 | make epubp | Build the EPUB with Pandoc
 | make epubx | Build the EPUB with xsltproc (equivalent to dbtoepub)
-| make md    | Build the Pandoc's Markdown by Pandoc
+| make html  | Build the HTML
+| make md    | Build the Pandoc's Markdown
 | make odt   | Build the OpenDocument (no cover page)
 | make pdf   | Build the PDF (both sizes)
 | make pdfa4 | Build the *PDF (DIN A4 size) (recommended)*
