--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.2.0-dev.12+20201107
+:revnumber: 0.2.0-dev.13+20201109
 :doctype: book
 :lang: ie
 :docinfo: private
@@ -29,7 +29,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 202011070030
+// Last modified 202011082308
 
 [colophon]
 // Pri ti libre {{{1
@@ -81,7 +81,18 @@ https://czadventures.wordpress.com/top-10[Czech Adventures]).
 Contributiones:: Corectiones e suggestiones por sequent versiones es
 benevenit che http://ne.alinome.net[ne.alinome.net].
 
-NOTE: Li nómine de Interlingue esset «Occidental» til 1949.
+<<<
+
+****
+Li nómine «Occidental» del lingue international creat de Edgar de Wahl
+esset 1949 viceat oficialmen per li nómine «Interlingue», sin changear li
+lingue self, por evitar li politic aspecte del nómine del ancian organisation
+Occidental-Union (poy Interlingue-Union).
+
+Actualmen ambi nómines es usat quam sinónimes. On usa anc combinationes quam
+«Interlingue (Occidental)», «Interlingue/Occidental» o
+«Occidental/Interlingue».
+****
 
 // Anteparol {{{1
 == Anteparol
