--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.2.0-dev.15+20201109
+:revnumber: 0.2.0-dev.16+20201109
 :doctype: book
 :lang: ie
 :docinfo: private
@@ -19,6 +19,7 @@ ifdef::backend-pdf[]
 :toclevels: 3
 :front-cover-image: ../tmp/krasina_cover.jpg.pdf
 endif::[]
+:last-update-label: Ultim modification in
 
 // This file is part of project
 // _Krasina_
@@ -29,7 +30,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 202011091646
+// Last modified 202011091704
 
 [colophon]
 // Pri ti libre {{{1
